[package]
authors = ["Dylan MacKenzie <ecstaticmorse@gmail.com>"]
name = "ksuid"
version = "0.3.0"
description = "A library for efficiently generating, parsing and serializing Segment.io KSUIDs"
repository = "https://github.com/ecstatic-morse/ksuid.git"
readme = "README.md"
keywords = ["uuid", "ksuid", "guid"]
license = "MIT"
edition = "2021"

[dependencies]
byteorder = "1.5.0"
rand = "0.8.5"
resize-slice = "0.1.3"
time = { version = "0.3.37", features = ["macros"] }

[dev-dependencies]
num = "0.4.3"

[features]
# Set on nightly to enable benchmarks
# We use this instead of a benches/ directory so we can benchmark internal functions
bench = []

[workspace]
members = ["cli"]
